--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,21 @@
     display: none;
 }
 
+#myForm {
+    width: 20%;
+}
+
+select {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    background-color: ;
+    border-radius: 3px;
+    margin-bottom: 10px;
+    /* color: #2C3E50; */
+    font-size: 13px;
+}
+
 /*inputs*/
  #myForm input {
     padding: 10px;
@@ -17,6 +32,32 @@
     color: #2C3E50;
     font-size: 13px;
 }
+
+#finalForm fieldset {
+    width: 50%;
+}
+
+button, a {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 8px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+.field2 input {
+    border: none;
+    border-radius: 3px;
+    width: 80%;
+    color: #2C3E50;
+    font-size:13px; 
+}
+
 #myForm textarea {
     padding: 15px;
     border: 1px solid #ccc;
