--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@
     width: 20%;
 }
 
+.field2 .editable {
+    border: 1px solid black;
+}
+
 select {
     margin-bottom: 10px;
     padding: 10px;
@@ -56,6 +60,7 @@ button, a {
     width: 80%;
     color: #2C3E50;
     font-size:13px; 
+    margin: 5px;
 }
 
 #myForm textarea {
